@@ -5,7 +5,7 @@
   <title>Famechos</title>
   <link>https://www.famechos.me/</link>
   <description>Famechos - News Article</description>
-  <lastBuildDate>Sun, 13 Oct 2024 23:20:09 +0800</lastBuildDate>
+  <lastBuildDate>Sun, 13 Oct 2024 23:21:26 +0800</lastBuildDate>
 <item>
   <title>KPOP界大事！RIIZE昇瀚回歸、防弹少年团金碩珍新單曲、aespa登頂iTunes榜單</title>
   <link>https://www.famechos.me/news/KPOP界大事！RIIZE昇瀚回歸、防弹少年团金碩珍新單曲、aespa登頂iTunes榜單.html</link>
@@ -224,5 +224,11 @@ YG娛樂旗下的新人女團BABYMONSTER（韓語：베이비몬스터）將於1
   <description>韓江獲諾貝爾文學獎 韓國娛樂圈恭賀。。韓國超級組合BTS成員V在社交媒體上恭賀韓江，表示自己在軍隊時讀過《人類行為》（Human Acts）。韓江是首位獲得諾貝爾文學獎的亞洲女性。。...</description>
   <category>K-Pop</category>
   <pubDate>Sun, 13 Oct 2024 23:20:09 +0800</pubDate>
+</item><item>
+  <title>釜山國際電影節觀眾人數破紀錄！14.5萬人爭睹全球影壇精英</title>
+  <link>https://www.famechos.me/news/釜山國際電影節觀眾人數破紀錄！14.5萬人爭睹全球影壇精英.html</link>
+  <description>釜山國際電影節創下新紀錄。。釜山國際電影節（BIFF）結束為期十天的活動，創下觀眾人數的新紀錄。今年的電影節共有來自63個國家的224部電影參展，吸引了超過14.5萬名觀眾前往釜山觀影。。...</description>
+  <category>K-Pop</category>
+  <pubDate>Sun, 13 Oct 2024 23:21:26 +0800</pubDate>
 </item></channel>
 </rss>
