@@ -1,0 +1,265 @@
+<!DOCTYPE html>
+<head>
+<script type='application/ld+json'>
+{"@context": "https://schema.org", "@graph": [{"@type": "Article", "headline": "\u91dc\u5c71\u570b\u969b\u96fb\u5f71\u7bc0\u89c0\u773e\u4eba\u6578\u7834\u7d00\u9304\uff0114.5\u842c\u4eba\u722d\u7779\u5168\u7403\u5f71\u58c7\u7cbe\u82f1", "description": "\u91dc\u5c71\u570b\u969b\u96fb\u5f71\u7bc0\u89c0\u773e\u4eba\u6578\u7834\u7d00\u9304\uff0114.5\u842c\u4eba\u722d\u7779\u5168\u7403\u5f71\u58c7\u7cbe\u82f1", "url": "https://www.famechos.me/news/\u91dc\u5c71\u570b\u969b\u96fb\u5f71\u7bc0\u89c0\u773e\u4eba\u6578\u7834\u7d00\u9304\uff0114.5\u842c\u4eba\u722d\u7779\u5168\u7403\u5f71\u58c7\u7cbe\u82f1.html", "image": "https://www.famechos.me/images/banner.jpg", "datePublished": "2024-10-13T23:21:19.770457+08:00", "author": {"@type": "Person", "name": "Famechos"}, "publisher": {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me"}}, {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me", "logo": "https://www.famechos.me/icons/favicon.png"}, {"@type": "WebSite", "name": "Famechos", "url": "https://www.famechos.me"}]}
+</script>
+<link rel="canonical" href="https://www.famechos.me/news/釜山國際電影節觀眾人數破紀錄！14.5萬人爭睹全球影壇精英.html"/>
+<meta name="description" content="釜山國際電影節再創佳績！吸引14.5萬名觀眾爭睹全球影壇精英的傑作，打破歷史紀錄。">
+
+<meta name="keywords" content="釜山國際電影節、觀眾人數破紀錄、全球影壇精英、電影節、影視娛樂">
+
+	<link rel="stylesheet" href="../main-nav.css">
+	<link rel="stylesheet" href="../main-content.css">
+	<link rel="stylesheet" href="../main-small.css">
+	<link rel="stylesheet" href="../post.css">
+	<link rel="stylesheet" href="../main-footer.css">
+	<link rel="stylesheet" href="../news.css">
+ 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"> 
+	<link rel="stylesheet" href="https://fonts.googleapis.com/earlyaccess/notosanstc.css">
+        <meta property="og:url" content="https://www.famechos.me/news/釜山國際電影節觀眾人數破紀錄！14.5萬人爭睹全球影壇精英.html" />
+        <meta property="og:title" content="釜山國際電影節觀眾人數破紀錄！14.5萬人爭睹全球影壇精英" />
+        <meta property="og:description" content="釜山國際電影節觀眾人數破紀錄！14.5萬人爭睹全球影壇精英" />
+        <meta property="og:image" content="https://www.famechos.me/images/banner.jpg" />
+        <meta property="twitter:card" content="summary_large_image" />
+        <meta property="twitter:title" content="釜山國際電影節觀眾人數破紀錄！14.5萬人爭睹全球影壇精英" />
+        <meta property="twitter:description" content="釜山國際電影節觀眾人數破紀錄！14.5萬人爭睹全球影壇精英" />
+        <meta property="twitter:image" content="https://www.famechos.me/images/banner.jpg" />
+	<meta name="theme-color" content="white">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta property="og:locale" content="zh_TW" />
+        <meta property="og:site_name" content="Famechos" />
+	<meta property="og:type" content="article" />
+	<meta name="robots" content="index, follow" />
+	<meta name="author" content="Famechos" />
+        <meta name="referrer" content="origin">
+	<meta name="apple-mobile-web-app-capable" content="yes"/>
+        <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
+        <meta name="apple-mobile-web-app-title" content="Avoir"/>
+        <meta name="apple-touch-fullscreen" content="yes"/>
+        
+<style> * {box-sizing: border-box;margin: 0;padding: 0;font-family: 'Noto Sans TC', sans-serif;scroll-behavior: smooth;}</style>
+
+</head>
+
+<body>
+
+<nav class="nav">
+    <div class="nav-outerbox">
+      <div class="nav-inner-left">
+        <div class="nav-name-logo">
+          <a href="https://www.famechos.me/"><img class="famechos-logo" src="../img/famechos_logo.png"></a>
+          
+        </div>
+        <div class="nav-separate">
+          <p>|</p>
+        </div>
+        <div class="nav-type-1 nav-type"><a href="https://www.famechos.me/k-pop.html">
+          <button class="nav-type-btn1 nav-type-btn">
+          <h2 class="nav-type-text">K-POP</h2>
+        </button></a>
+  
+        </div>
+        <div class="nav-type-2 nav-type"><a href="https://www.famechos.me/j-pop.html">
+          <button class="nav-type-btn2 nav-type-btn">
+          <h2 class="nav-type-text">J-POP</h2>
+        </button></a>
+  
+        </div>
+        <div class="nav-type-3 nav-type"><a href="https://www.famechos.me/drama.html">
+          <button class="nav-type-btn3 nav-type-btn">
+          <h2 class="nav-type-text">影視</h2>
+        </button></a>
+          
+        </div>
+        <div class="nav-type-4 nav-type"><a href="https://www.famechos.me/others.html">
+          <button class="nav-type-btn4 nav-type-btn">
+          <h2 class="nav-type-text">其他</h2>
+        </button></a>
+        </div>  
+      </div>
+      <div class="nav-inner-right">
+        <div class="nav-feedback-outer"><a href="https://www.famechos.me/about_us.html">
+          <button class="feedback-btn nav-type-btn">
+            <h2 class="nav-type-text">關於我們</h2>
+          </button></a>
+        </div>
+        <div class="nav-setting"><a href="https://www.famechos.me/privacy_policy.html">
+          <button class="setting-btn nav-type-btn">
+            <h2 class="nav-type-text">私隱條款</h2>
+          </button></a>
+        </div>
+        <div class="nav-list">
+          <button id="list-btn" class="list-btn nav-type-btn">
+            <i class="bi bi-list"></i>
+          </button>
+        </div>
+
+      </div>
+
+      <div id="list" class="nav-list-outer">
+        <div class="nav-type-1 nav-type list-type"><a href="https://www.famechos.me/k-pop.html">
+          <button class="list-type-btn">
+          <p>K-POP</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-2 nav-type list-type"><a href="https://www.famechos.me/j-pop.html">
+          <button class="list-type-btn">
+          <p>J-POP</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-3 nav-type list-type"><a href="https://www.famechos.me/drama.html">
+          <button class="list-type-btn">
+          <p>影視</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-4 nav-type list-type"><a href="https://www.famechos.me/others.html">
+          <button class="list-type-btn">
+          <p>其他</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-5 nav-type list-type"><a href="https://www.famechos.me/about_us.html">
+          <button class="list-type-btn">
+          <p>關於我們</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-6 nav-type list-type"><a href="https://www.famechos.me/privacy_policy.html">
+          <button class="list-type-btn">
+          <p>私隱條款</p>
+          </button></a>
+
+        </div>  
+
+      </div>
+      
+    </div>
+  </nav>
+
+
+  <main>
+    <div class="news-main-outer">
+      <div class="news-title-outer">
+        <h1>釜山國際電影節觀眾人數破紀錄！14.5萬人爭睹全球影壇精英</h1>
+	</div>
+
+      <div class="news-content-outer">
+
+        <div class="news-info-outer">
+          <p class="news-content-type">K-Pop</p>
+          <p class="news-date">13/10/2024</p>
+        </div>
+	<p>釜山國際電影節（BIFF）結束為期十天的活動，創下觀眾人數的新紀錄。今年的電影節共有來自63個國家的224部電影參展，吸引了超過14.5萬名觀眾前往釜山觀影。</p>
+<p>主辦委員會共同副主任朴道信表示，今年的電影節取得了最高的上座率，儘管面臨著國家預算削減等挑戰。他還就網上售票系統出現問題向觀眾致歉，並表示委員會將在暫停售票系統後進行改善。</p>
+<p>電影節與觀眾的密切互動是今年的亮點，包括日本導演黑澤清和葡萄牙導演米格爾·戈麥斯等全球知名導演與當地電影愛好者進行交流。這些導演的作品也在電影節上獲得了特別展映。</p>
+<p>以下是今年的得獎名單：</p>
+<ul>
+<li>新浪潮獎（New Currents Award）：朴利雄的《The Land of Morning Calm》和The Maw Naing的《MA — Cry of Silence》</li>
+<li>金智奭獎（Kim Jiseok Award）：麗瑪·達斯的《Village Rockstars 2》和林書宇的《Yen and Ai-LEE》</li>
+<li>最佳紀錄片獎（BIFF Mecenat Award）：導演冼澔楊的《 Home》和朴敏秀、安基亨的《Work and Days》</li>
+<li>善才獎（Sonje Award）：宋智瑞的《Yurim》和Eleonore Mahmoudian、Matsui Hiroshi的《A Garden in Winter》</li>
+</ul>
+<p>電影節以新加坡導演邱金海的最新作品《Spirit World》作為閉幕影片。主辦委員會表示，明年的電影節將於9月17日開幕，為期十天。</p>
+
+<p>資料來源：TheKoreaTimes</p>
+</div><div class ="news-vid-outer">
+<div class="related-vid-text-outer title-bar ">
+<p class="related-vid-text">相關影片：</p>
+</div>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/tgRObfI_YM4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+
+<p class="news-text-inner">資料來源： YouTube</p>
+</div>
+
+
+ <div class ="related-news-outer title-bar">
+        <p class="related-news-text">相關新聞：</p>
+      </div>
+      
+      <div class ="related-news-box">
+        
+	<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/韓國文學全球崛起！諾貝爾獎後再下一城，韓國作家連續三年入圍布克獎.html">韓國文學全球崛起！諾貝爾獎後再下一城，韓國作家連續三年入圍布克獎</a>
+        </p>
+                
+	<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/諾貝爾文學獎花落韓江！李敏金恭賀「亞洲第一女」揭露人類生命脆弱性.html">諾貝爾文學獎花落韓江！李敏金恭賀「亞洲第一女」揭露人類生命脆弱性</a>
+        </p>
+                
+	<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/RIIZE勝韓重返團隊引發粉絲抗議！元斌親自出面懇求粉絲支持.html">RIIZE勝韓重返團隊引發粉絲抗議！元斌親自出面懇求粉絲支持</a>
+        </p>
+                
+      </div>
+
+    </div>
+
+    </main>
+ <footer class="footer">
+    <div class="footer-outer">
+
+
+      <div class="footer-up-outer">
+        <div class="footer-right-name-box">
+          <a href="https://www.famechos.me/"><img class="famechos-logo-footer" src="../img/famechos_logo.png"></a>
+        </div>
+        <div class="footer-right-text-box">
+          <p class="footer-right-text">每日為你提供最新、最全面的日韓資訊。</p>
+        </div>
+        <div class="footer-button-box">
+          <button class="facebook-btn footer-btn">
+            <i class="bi bi-facebook footer-logo"></i>
+          </button>
+          <button class="ig-btn footer-btn">
+            <i class="bi bi-instagram footer-logo"></i>
+          </button>
+          <button class="x-btn footer-btn">
+            <i class="bi bi-twitter-x footer-logo"></i>
+          </button>
+          <button class="x-btn footer-btn">
+            <i class="bi bi-envelope-fill footer-logo"></i>
+          </button>
+        </div>
+      </div>
+
+      <div class="footer-down-outer">
+        <div class="kpop-footer-box footer-box">
+          <a href="https://www.famechos.me/k-pop.html"><p class="footer-text">K-POP</p></a>
+        </div>
+        <div class="jpop-footer-box footer-box">
+          <a href="https://www.famechos.me/j-pop.html"><p class="footer-text">J-POP</p></a>
+        </div>
+        <div class="drama-footer-box footer-box">
+          <a href="https://www.famechos.me/drama.html"><p class="footer-text">影視</p></a>
+        </div>
+        <div class="other-footer-box footer-box">
+          <a href="https://www.famechos.me/others.html"><p class="footer-text">其他</p></a>
+        </div>
+
+
+      </div>
+
+      <div class="copyright-outer">
+        <p class="copyright-text">
+          Copyright © 2024 by <strong>Famechos.me</strong> All Rights Reserved.
+        </p>
+      </div>
+
+      
+    </div>
+
+
+
+  </footer>
+
+<script src="../nav-list.js"></script>
+
+</body>
+</html>
