@@ -39,3 +39,4 @@ https://en.yna.co.kr/view/AEN20241010010756315?section=culture/k-pop&input=rss
 https://en.yna.co.kr/view/AEN20241010012100315?section=culture/k-pop&input=rss
 https://en.yna.co.kr/view/AEN20241011000652315?section=culture/k-pop&input=rss
 https://www.koreaherald.com/view.php?ud=20241013050081
+https://koreatimes.co.kr/www/nation/2024/10/732_384043.html?utm_source=fl
